Toml functionality ready
The worker_cli can now create a default configuration file and parse a configuration file into a configuration struct.

Current warnings are related to variables and functions not being called (yet). Will dissapear once the TOML functionality is mapped to CLI arguments.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,12 @@ description = "Simulation platform for a mesh network."
 
 [dependencies]
 crossbeam = "0.2"
-rand = "*"
+rand = "0.3.15"
 nanomsg = "0.6"
 rustc-serialize = "0.3"
-serde_derive = "*"
-serde = "*"
-serde_cbor = "*"
+serde_derive = "1.0.10"
+serde = "1.0.10"
+serde_cbor = "0.6.0"
 clap = "2.19.0"
 slog = "1.5"
 slog-stream = "1.2.0"
@@ -24,3 +24,4 @@ slog-term = "1.5.0"
 slog-json = "1.2.1"
 slog-stdlog = "1.1.0"
 log = "0.3.7"
+toml = "0.4.2"
