--- a/worker.toml
+++ b/worker.toml
@@ -1,9 +1,9 @@
 worker_name = "Worker1"
-random_seed = 12345
-work_dir = "."
+random_seed = 0
+work_dir = "/tmp"
 operation_mode = "Simulated"
-reliability = 1.0
+reliability = 1
 delay = 0
 scan_interval = 2000
-broadcast_groups = ["bcast_g1"]
-
+broadcast_groups = ["group1"]
+interface_name = "wlan0"
