--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,16 @@ serde_derive = "1.0.10"
 serde = "1.0.10"
 serde_cbor = "0.6.0"
 clap = "2.19.0"
-slog = "1.5"
-slog-stream = "1.2.0"
-slog-term = "1.5.0"
-slog-json = "1.2.1"
-slog-stdlog = "1.1.0"
-log = "0.3.7"
+
+#Logging
+slog = "2.1.1"
+slog-term = "2.3.0"
+slog-json = "2.2.0"
+slog-stdlog = "3.0.2"
+slog-scope = "4.0.1"
+slog-async = "2.2.0"
+log = "0.4.1"
+
 toml = "0.4.2"
 byteorder = "1.0.0"
 pnet = "0.20.0"
