--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rustc-serialize = "0.3"
 serde_derive = "1.0.10"
 serde = "1.0.10"
 serde_cbor = "0.6.0"
+serde_json = "1.0"
 clap = "2.19.0"
 slog = "1.5"
 slog-stream = "1.2.0"
