--- a/tests/integration/specs/basic_test.toml
+++ b/tests/integration/specs/basic_test.toml
@@ -1,24 +1,50 @@
 name = "basic_test"
 actions = ["EndTest 1000"]
 
-[[nodes]]
-worker_name = "node1"
-random_seed = 123
-work_dir = "./tests/basic_test"
-operation_mode = "Simulated"
-reliability = 1
-delay = 0
-scan_interval = 2000
-broadcast_groups = ["group1"]
-interface_name = "wlan0"
+[worker1]
+    worker_name = "worker1"
+    work_dir = "/tmp"
+    random_seed = 0
+    operation_mode = "Simulated"
+    [worker1.radio_short]
+        broadcast_groups = ["group1"]
+        reliability = 1.0
+        delay = 0
+        interface_name = "wlan0"
+    [worker1.radio_long]
+        broadcast_groups = ["group1"]
+        reliability = 1.0
+        delay = 0
+        interface_name = "wlan1"
 
-[[nodes]]
-worker_name = "node2"
-random_seed = 456
-work_dir = "./tests/basic_test"
-operation_mode = "Simulated"
-reliability = 1
-delay = 0
-scan_interval = 2000
-broadcast_groups = ["group1", "group2"]
-interface_name = "wlan0"
+[worker2]
+    worker_name = "node2"
+    work_dir = "/tmp"
+    random_seed = 456
+    operation_mode = "Simulated"
+    [worker2.radio_short] #Short-range radio
+        reliability = 1 #Not used in device_mode
+        delay = 0 #Not used in device_mode
+        broadcast_groups = ["group1", "group2"] #Not used in device_mode
+        interface_name = "wlan0" #Not used in simulated_mode
+    [worker2.radio_long] #Long-range radio
+        reliability = 1 #Not used in device_mode
+        delay = 0 #Not used in device_mode
+        broadcast_groups = ["group1", "group2"] #Not used in device_mode
+        interface_name = "wlan1" #Not used in simulated_mode
+
+# [[nodes]]
+#     worker_name = "worker1"
+#     work_dir = "/tmp"
+#     random_seed = 0
+#     operation_mode = "Simulated"
+#     radio_short = { broadcast_groups = ["group1"], reliability = 1.0, delay = 0, interface_name = "wlan0" }
+#     radio_long =  { broadcast_groups = ["group1"], reliability = 1.0, delay = 0, interface_name = "wlan1" }
+
+# [[nodes]]
+#     worker_name = "node2"
+#     work_dir = "/tmp"
+#     random_seed = 456
+#     operation_mode = "Simulated"
+#     radio_short = { broadcast_groups = ["group1", "group2"], reliability = 1.0, delay = 0, interface_name = "wlan0" }
+#     radio_long =  { broadcast_groups = ["group1", "group2"], reliability = 1.0, delay = 0, interface_name = "wlan1" }
