--- a/worker.toml
+++ b/worker.toml
@@ -1,9 +1,15 @@
-worker_name = "Worker1"
+worker_name = "worker1"
+work_dir = "."
 random_seed = 0
-work_dir = "/tmp"
 operation_mode = "Simulated"
-reliability = 1
-delay = 0
-scan_interval = 2000
+[[radios]]
+[radio_short]
 broadcast_groups = ["group1"]
+reliability = 1.0
+delay = 0
+interface_name = "wlan0"
+[radio_long]
+broadcast_groups = ["group1"]
+reliability = 1.0
+delay = 0
 interface_name = "wlan0"
