--- a/tests/integration/specs/basic_test.toml
+++ b/tests/integration/specs/basic_test.toml
@@ -1,33 +1,33 @@
 name = "basic_test"
-actions = ["EndTest 3000"]
+actions = ["End_Test 3000", "Add_Node node2 200"]
 
-[nodes.worker1]
+[initial_nodes.node1]
     worker_name = "node1"
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
-    [nodes.worker1.radio_short]
+    [initial_nodes.node1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan0"
-    [nodes.worker1.radio_long]
+    [initial_nodes.node1.radio_long]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan1"
 
-[nodes.worker2]
+[available_nodes.node2]
     worker_name = "node2"
     work_dir = "/tmp"
     random_seed = 456
     operation_mode = "Simulated"
-    [nodes.worker2.radio_short] #Short-range radio
+    [available_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
         broadcast_groups = ["group1", "group2"] #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
-    [nodes.worker2.radio_long] #Long-range radio
+    [available_nodes.node2.radio_long] #Long-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
         broadcast_groups = ["group1", "group2"] #Not used in device_mode
