--- a/tests/integration/specs/heartbeat_test.toml
+++ b/tests/integration/specs/heartbeat_test.toml
@@ -1,35 +1,37 @@
 #This test is designed to run for 6 seconds, such that each worker can trigger it's heartbeat-timer once
 #and complete the heartbeat-handshake.
+#We used 1 initial node and add a second node shortly after to a potential deadlock in which the 2 process
+#start at the exact same time and end up waiting on the other to responde to the heartbeat message.
 name = "heartbeat_test"
-actions = ["EndTest 7000"]
+actions = ["End_Test 7000", "Add_Node node2 100"]
 
-[nodes.worker1]
+[initial_nodes.worker1]
     worker_name = "node1"
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
-    [nodes.worker1.radio_short]
+    [initial_nodes.worker1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan0"
-    [nodes.worker1.radio_long]
+    [initial_nodes.worker1.radio_long]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan1"
 
-[nodes.worker2]
+[available_nodes.node2]
     worker_name = "node2"
     work_dir = "/tmp"
     random_seed = 456
     operation_mode = "Simulated"
-    [nodes.worker2.radio_short] #Short-range radio
+    [available_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
         broadcast_groups = ["group1", "group2"] #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
-    [nodes.worker2.radio_long] #Long-range radio
+    [available_nodes.node2.radio_long] #Long-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
         broadcast_groups = ["group1", "group2"] #Not used in device_mode
