--- a/tests/integration/specs/heartbeat_test.toml
+++ b/tests/integration/specs/heartbeat_test.toml
@@ -10,6 +10,7 @@ actions = ["End_Test 7000", "Add_Node node2 100"]
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
+    protocol = "TMembership"
     [initial_nodes.worker1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
@@ -26,6 +27,7 @@ actions = ["End_Test 7000", "Add_Node node2 100"]
     work_dir = "/tmp"
     random_seed = 456
     operation_mode = "Simulated"
+    protocol = "TMembership"
     [available_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
