--- a/tests/integration/specs/killnode_test.toml
+++ b/tests/integration/specs/killnode_test.toml
@@ -10,6 +10,7 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
+    protocol = "TMembership"
     [initial_nodes.worker1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
@@ -26,6 +27,7 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
     work_dir = "/tmp"
     random_seed = 456
     operation_mode = "Simulated"
+    protocol = "TMembership"
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
@@ -42,6 +44,7 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
     work_dir = "/tmp"
     random_seed = 789
     operation_mode = "Simulated"
+    protocol = "TMembership"
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
