--- a/tests/integration/specs/join_test.toml
+++ b/tests/integration/specs/join_test.toml
@@ -1,4 +1,4 @@
-name = "basic_test"
+name = "join_test"
 actions = ["End_Test 3000", "Add_Node node2 200"]
 
 [initial_nodes.node1]
@@ -12,11 +12,6 @@ actions = ["End_Test 3000", "Add_Node node2 200"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan0"
-    [initial_nodes.node1.radio_long]
-        broadcast_groups = ["group1"]
-        reliability = 1.0
-        delay = 0
-        interface_name = "wlan1"
 
 [available_nodes.node2]
     worker_name = "node2"
@@ -29,8 +24,3 @@ actions = ["End_Test 3000", "Add_Node node2 200"]
         delay = 0 #Not used in device_mode
         broadcast_groups = ["group1", "group2"] #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
-    [available_nodes.node2.radio_long] #Long-range radio
-        reliability = 1 #Not used in device_mode
-        delay = 0 #Not used in device_mode
-        broadcast_groups = ["group1", "group2"] #Not used in device_mode
-        interface_name = "wlan1" #Not used in simulated_mode
