--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ socket2 = { version = "0.3.7", features = ["unix"] }
 pretty_assertions = "0.5.1"
 lazy_static = "1.2.0"
 md5 = "0.6.0"
+base64 = "0.10.0"
 
 [dev-dependencies]
 assert_cli = "0.5"
