--- a/tests/integration/specs/naive_basic_test.toml
+++ b/tests/integration/specs/naive_basic_test.toml
@@ -3,15 +3,15 @@
 #We used 1 initial node and add a second node shortly after to a potential deadlock in which the 2 process
 #start at the exact same time and end up waiting on the other to responde to the heartbeat message.
 name = "naive_basic_test"
-actions = ["End_Test 1000", "Kill_Node node2 500"]
+actions = ["End_Test 1000", "Ping node1 node3 500"]
 
-[initial_nodes.worker1]
+[initial_nodes.node1]
     worker_name = "node1"
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
-    [initial_nodes.worker1.radio_short]
+    [initial_nodes.node1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
