--- a/tests/integration/specs/heartbeat_test.toml
+++ b/tests/integration/specs/heartbeat_test.toml
@@ -5,13 +5,13 @@
 name = "heartbeat_test"
 actions = ["End_Test 7000", "Add_Node node2 100"]
 
-[initial_nodes.node1]
+[initial_nodes.worker1]
     worker_name = "node1"
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
     protocol = "TMembership"
-    [initial_nodes.node1.radio_short]
+    [initial_nodes.worker1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
