--- a/tests/integration/specs/heartbeat_test.toml
+++ b/tests/integration/specs/heartbeat_test.toml
@@ -16,13 +16,18 @@ actions = ["End_Test 7000", "Add_Node node2 100"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan0"
-
+    [initial_nodes.node1.position]
+        x = 0.0
+        y = 0.0
 [available_nodes.node2]
     worker_name = "node2"
     work_dir = "/tmp"
     random_seed = 456
     operation_mode = "Simulated"
     protocol = "TMembership"
+    [available_nodes.node2.position]
+        x = 0.0
+        y = 0.0
     [available_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
