--- a/tests/integration/specs/killnode_test.toml
+++ b/tests/integration/specs/killnode_test.toml
@@ -5,18 +5,21 @@
 name = "heartbeat_test"
 actions = ["End_Test 1000", "Kill_Node node2 500"]
 
-[initial_nodes.worker1]
+[initial_nodes.node1]
     worker_name = "node1"
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
     protocol = "TMembership"
-    [initial_nodes.worker1.radio_short]
+    [initial_nodes.node1.position]
+        x = 0.0
+        y = 0.0
+    [initial_nodes.node1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan0"
-    [initial_nodes.worker1.radio_long]
+    [initial_nodes.node1.radio_long]
         broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
@@ -28,6 +31,9 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
     random_seed = 456
     operation_mode = "Simulated"
     protocol = "TMembership"
+    [initial_nodes.node2.position]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
@@ -45,6 +51,9 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
     random_seed = 789
     operation_mode = "Simulated"
     protocol = "TMembership"
+    [initial_nodes.node3.position]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
