--- a/tests/integration/specs/naive_basic_test.toml
+++ b/tests/integration/specs/naive_basic_test.toml
@@ -3,7 +3,7 @@
 #We used 1 initial node and add a second node shortly after to a potential deadlock in which the 2 process
 #start at the exact same time and end up waiting on the other to responde to the heartbeat message.
 name = "naive_basic_test"
-actions = ["End_Test 1000", "Ping node1 node3 500"]
+actions = ["End_Test 1500", "Ping node1 node3 800"]
 
 [initial_nodes.node1]
     worker_name = "node1"
@@ -11,6 +11,9 @@ actions = ["End_Test 1000", "Ping node1 node3 500"]
     random_seed = 0
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
+    [initial_nodes.node1.position]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node1.radio_short]
         broadcast_groups = ["group1"]
         reliability = 1.0
@@ -23,6 +26,9 @@ actions = ["End_Test 1000", "Ping node1 node3 500"]
     random_seed = 456
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
+    [initial_nodes.node2.position]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
@@ -35,6 +41,9 @@ actions = ["End_Test 1000", "Ping node1 node3 500"]
     random_seed = 789
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
+    [initial_nodes.node3.position]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
