--- a/tests/integration/specs/heartbeat_test.toml
+++ b/tests/integration/specs/heartbeat_test.toml
@@ -12,10 +12,10 @@ actions = ["End_Test 7000", "Add_Node node2 100"]
     operation_mode = "Simulated"
     protocol = "TMembership"
     [initial_nodes.node1.radio_short]
-        broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan0"
+        range = 100.0
     [initial_nodes.node1.position]
         x = 0.0
         y = 0.0
@@ -31,5 +31,5 @@ actions = ["End_Test 7000", "Add_Node node2 100"]
     [available_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
-        broadcast_groups = ["group1", "group2"] #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
+        range = 100.0
