--- a/tests/integration/specs/killnode_test.toml
+++ b/tests/integration/specs/killnode_test.toml
@@ -15,15 +15,15 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
         x = 0.0
         y = 0.0
     [initial_nodes.node1.radio_short]
-        broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan0"
+        range = 100.0
     [initial_nodes.node1.radio_long]
-        broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
         interface_name = "wlan1"
+        range = 100.0
 
 [initial_nodes.node2]
     worker_name = "node2"
@@ -37,13 +37,13 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
-        broadcast_groups = ["group1", "group2"] #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
+        range = 100.0
     [initial_nodes.node2.radio_long] #Long-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
-        broadcast_groups = ["group1", "group2"] #Not used in device_mode
         interface_name = "wlan1" #Not used in simulated_mode
+        range = 100.0
 
 [initial_nodes.node3]
     worker_name = "node3"
@@ -57,12 +57,12 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
-        broadcast_groups = ["group2"] #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
+        range = 100.0
     [initial_nodes.node3.radio_long] #Long-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
-        broadcast_groups = ["group2"] #Not used in device_mode
         interface_name = "wlan1" #Not used in simulated_mode
+        range = 100.0
 
 [available_nodes]
