--- a/tests/integration/specs/naive_basic_test.toml
+++ b/tests/integration/specs/naive_basic_test.toml
@@ -3,22 +3,21 @@
 #We used 1 initial node and add a second node shortly after to a potential deadlock in which the 2 process
 #start at the exact same time and end up waiting on the other to responde to the heartbeat message.
 name = "naive_basic_test"
-actions = ["End_Test 1500", "Ping node1 node3 800"]
+actions = ["End_Test 3000", "Ping node1 node3 1500"]
 
 [initial_nodes.node1]
     worker_name = "node1"
     work_dir = "/tmp"
-    random_seed = 0
+    random_seed = 123
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
     [initial_nodes.node1.position]
-        x = 0.0
+        x = -60.0
         y = 0.0
     [initial_nodes.node1.radio_short]
-        broadcast_groups = ["group1"]
         reliability = 1.0
         delay = 0
-        #interface_name = "wlan0"
+        range = 100.0
 
 [initial_nodes.node2]
     worker_name = "node2"
@@ -32,8 +31,7 @@ actions = ["End_Test 1500", "Ping node1 node3 800"]
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
-        broadcast_groups = ["group1", "group2"] #Not used in device_mode
-        #interface_name = "wlan0" #Not used in simulated_mode
+        range = 100.0
 
 [initial_nodes.node3]
     worker_name = "node3"
@@ -42,12 +40,11 @@ actions = ["End_Test 1500", "Ping node1 node3 800"]
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
     [initial_nodes.node3.position]
-        x = 0.0
+        x = 60.0
         y = 0.0
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
-        broadcast_groups = ["group2"] #Not used in device_mode
-        #interface_name = "wlan0" #Not used in simulated_mode
+        range = 100.0
 
 [available_nodes]
